--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="{% url 'blog' %}">
             <img src="{% static 'image/icon.webp' %}" alt="icon" width="50px">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,16 +19,22 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'form' %}">Post</a>
+              </li>
+              {% else %}
+              {% endif %}
               
             </ul>
             <form class="d-flex" role="search">
                 {% if user.is_authenticated %}
-                <button class="btn btn-success me-2" type="submit">Sign up</button>
-                <button class="btn btn-outline-success" type="submit">Login</button>
+                <a href="{% url 'blog' %}" class="btn btn-success me-2" type="submit">Blog</a>
+                <a href="{% url 'logout' %}" class="btn btn-outline-success" type="submit">Log out</a>
                 {% else %}
-                <button class="btn btn-success me-2" type="submit">Blog</button>
-                <button class="btn btn-outline-success" type="submit">Log out</button>
+                
+                <a href="{% url 'signup' %}" class="btn btn-success me-2" type="submit">Sign up</a>
+                <a href="{% url 'login' %}" class="btn btn-outline-success" type="submit">Login</a>
                 {% endif %}
             </form>
           </div>
