--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,14 @@
     {% block content %}
 
     {% endblock %}
+    <footer class="bg-light text-center text-lg-start">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2023 Copyright:
+        <a class="text-dark" href="#">Sblog</a>, Made by <a class="text-dark" href="https://iamtuandung.web.app/" target="_blank">Lương Tuấn Dũng</a>.
+      </div>
+      <!-- Copyright -->
+    </footer>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
